# llm-memory-experiments

./: .gitignore  DISTRIBUTED_COORDINATION.md  MACHINE_CAPABILITY_ASSESSMENT.md  README.md  REBOOT.md  big_o_dataset.json  big_o_dataset_generator.py  experiment_flowchart.md  p1_big_o_experiment_log_20251124.md  p1_experiment_log_20251124.md  pyproject.toml
archive/: MAIN_EXPERIMENT_GUIDE.md  critical_prerequisites_final.txt  e2_redesign_scenarios.txt  experiment.txt  experiment_revised.txt  experiment_revisions_supplement.txt
e0-parameter-optimization/: methodology.md
e1-memory-retrieval/: methodology.md
e2-fine-tuning/: methodology.md
machine_capability/: README.md  capability_report_Krypton_20251114_175314.json  capability_summary_Krypton.txt  machine_capability_enhanced.py  pyproject.toml  test_capability_basic.py
prerequisites/: methodology.md  p1_embedding_validity.py  p2_retrieval_utility.py
prerequisites/results/: p1_big_o_embedding_analysis.json  p1_embedding_analysis.json  p2_retrieval_analysis.json
