[project]
name = "llm-memory-experiments"
version = "0.1.0"
description = "Experiments testing LLM memory and fine-tuning for mathematical problem-solving"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "ollama>=0.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
torch = [
    "torch>=2.0.0",
]
tensorflow = [
    "tensorflow>=2.12.0",
]
mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.json",
    "*.txt",
    "capability_*",
    ".git",
    ".venv",
    "__pycache__",
]

[dependency-groups]
dev = []

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true