[project]
name = "machine-capability-assessment"
version = "1.0.0"
description = "Machine capability assessment for LLM experiments"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
assess = "machine_capability_enhanced:main"
assess-basic = "test_capability_basic:main"